<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="164dp"
        android:entries="@array/user_type"
        android:hint="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/txt_FirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txt_Id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/txt_Id"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/txt_Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_LastName" />

    <EditText
        android:id="@+id/txt_Phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/txt_Phone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/txt_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Id" />

    <EditText
        android:id="@+id/txt_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/txt_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txt_Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Phone" />

    <EditText
        android:id="@+id/txt_FirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:hint="@string/txt_FirstName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_LastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/txt_LastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/txt_LastName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_Id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_FirstName" />

    <EditText
        android:id="@+id/txt_Address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:hint="@string/txt_Address"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Email" />

    <Button
        android:id="@+id/ButtonRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="131dp"
        android:onClick="Registrar"
        android:text="@string/ButtonRegistration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Address"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>